[metadata]
name = event-gateway-cli
url = https://github.com/radon-h2020/radon-event-gateway-cli
project_urls =
    Source Code = https://github.com/radon-h2020/radon-event-gateway-cli
    Bug Tracker = https://github.com/radon-h2020/radon-event-gateway-cli/issues
author = XLAB d.o.o.
author_email = pypi@xlab.si
license_file = LICENSE
description = Python CLI for setting up an event gateway.
long_description = file: README.md
long_description_content_type= text/markdown
keywords =
    radon
    events
    gateway
    cloud
    multicloud
    aws
    azure
    s3
    lambda
    function
    api gateway

classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
zip_safe = True
include_package_data = True
setup_requires =
  setuptools_scm
install_requires =
    boto3==1.14.15
    botocore==1.17.15
    azure==4.0.0
    azure-storage==0.36.0
    azure-functions==1.0.7

[options.entry_points]
console_scripts =
  event-gateway-cli = event_gateway.event_gateway:main
